Fixed technologies section spacing

--- a/css/agency.custom.css
+++ b/css/agency.custom.css
@@ -775,6 +775,6 @@ body {
   }
 }
 
-.img-vertalign{
-  padding-top: 10px;
+.col-separate{
+  padding-bottom: 50px;
 }
